--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -16,6 +16,7 @@
     <ul class="nav navbar-nav">
       <li><%= link_to "Products", products_path %></li>
     </ul>
+    <%= render "cart" %>
   </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
