--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
 <%= render "nav" %>
 <div class='container'>
+  <%= content_tag :div, notice, class: "bg-success" %>
+  <%= content_tag :div, alert, class: "bg-danger" %>
   <%= yield %>
 </div>
 
