--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,3 +1,5 @@
+%h1 Your cart
+
 %table.table.table-hover
   %thead
     %tr
@@ -11,6 +13,12 @@
       %td
         =image_tag item.product.image.thumb
         =link_to item.product.name, item.product
-      %td=item.total_price
+      %td.text-right=number_to_currency item.total_price
+  %tfoot
+    %tr
+      %td.text-right(colspan=3)
+        %strong
+          Total:
+          =number_to_currency @cart.total_price
 
-%p=@cart.total_price
+%p=link_to "Checkout", checkout_cart_path, class: "btn btn-primary"
